--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -28,7 +30,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.3",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -39,7 +41,7 @@
     "@types/react": "^19.1.2",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
