--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/themes": "^3.2.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
     "jotai": "^2.12.4",
     "lucide-react": "^0.511.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.1",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
@@ -30,6 +32,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.3"
   },
