--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookies-next": "^5.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.23.12",
     "jotai": "^2.12.4",
     "lucide-react": "^0.511.0",
     "next": "15.3.0",
