--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "react-hook-form": "^7.56.1"
+
   }
 }
