--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "framer-motion": "^12.23.12",
     "jotai": "^2.12.4",
     "lucide-react": "^0.511.0",
-    "next": "15.3.0",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.1",
-    "react": "^19.0.0",
+    "react": "^19.2.4",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.7",
@@ -54,11 +54,10 @@
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^19",
     "eslint": "^9.31.0",
-    "eslint-config-next": "15.3.0",
+    "eslint-config-next": "^16.1.6",
+    "react-hook-form": "^7.56.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5",
-    "react-hook-form": "^7.56.1"
-
+    "typescript": "^5"
   }
 }
